--- a/Finance.AvaloniaClient/Views/MainWindow.axaml
+++ b/Finance.AvaloniaClient/Views/MainWindow.axaml
@@ -4,9 +4,50 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:Finance.AvaloniaClient.Views"
+		xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Finance.AvaloniaClient.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Finance.AvaloniaClient">
-        <views:MainView />
+	<Grid RowDefinitions="Auto, *, Auto">
+
+		<!--Title bar-->
+		<Grid Grid.Row="0" Background="Orange" Height="40" ColumnDefinitions="Auto, Auto, *, Auto, Auto">
+			<Rectangle Grid.Column="0" Fill="Red" Width="40"/>
+			<Rectangle Grid.Column="1" Fill="Green" Width="40"/>
+			<TextBlock Text="{Binding BuldTitle}" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="24" FontWeight="Black"/>
+			<Rectangle Grid.Column="3" Fill="Blue" Width="40"/>
+			<Rectangle Grid.Column="4" Fill="Yellow" Width="40"/>
+		</Grid>
+
+		<!--Main area-->
+		<Grid Grid.Row="1" Background="Gray" ColumnDefinitions="Auto, Auto, *">
+
+			<StackPanel Grid.Column="0" Width="120" Background="Purple">
+				<TextBlock Text="Доходы" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10" FontSize="16"/>
+				<TextBlock Grid.Column="0" Text="Расходы" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10" FontSize="16"/>
+				<TextBlock Text="Сбережения" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10" FontSize="16"/>
+			</StackPanel>
+
+			<StackPanel Grid.Column="1" Width="120" Background="BlueViolet">
+				<TextBlock Text="{Binding Income}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" FontSize="16"/>
+				<TextBlock Text="{Binding Expenses}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" FontSize="16"/>
+				<TextBlock Text="{Binding Savings}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" FontSize="16"/>
+			</StackPanel>
+
+			<Border Grid.Column="2">
+				<lvc:CartesianChart
+					Series="{Binding Series}">
+				</lvc:CartesianChart>
+			</Border>
+
+		</Grid>
+
+		<!--Bottom bar-->
+		<Grid Grid.Row="2" Background="White" ColumnDefinitions="Auto, Auto,* Auto, Auto, Auto" Margin="5">
+			<Button Content="нАЖМИ"/>
+		</Grid>
+
+
+	</Grid>
 </Window>
