--- a/Finance.AvaloniaClient/Views/MainWindow.axaml
+++ b/Finance.AvaloniaClient/Views/MainWindow.axaml
@@ -4,11 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:Finance.AvaloniaClient.Views"
+        xmlns:conv="clr-namespace:Finance.AvaloniaClient.Converter"
 		xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Finance.AvaloniaClient.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Finance.AvaloniaClient">
+	<Window.Resources>
+		<conv:PositiveValueConverter x:Key="PositiveValueConverter" />
+	</Window.Resources>
+	
 	<Grid RowDefinitions="Auto, *, Auto">
 
 		<!--Title bar-->
@@ -23,16 +28,25 @@
 		<!--Main area-->
 		<Grid Grid.Row="1" Background="Gray" ColumnDefinitions="Auto, Auto, *">
 
-			<StackPanel Grid.Column="0" Width="120" Background="Purple">
+			<StackPanel Grid.Column="0" Width="130" Background="Purple">
 				<TextBlock Text="Доходы" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10" FontSize="16"/>
 				<TextBlock Grid.Column="0" Text="Расходы" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10" FontSize="16"/>
 				<TextBlock Text="Сбережения" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10" FontSize="16"/>
 			</StackPanel>
 
-			<StackPanel Grid.Column="1" Width="120" Background="BlueViolet">
+			<StackPanel Grid.Column="1" Width="130" Background="BlueViolet">
 				<TextBlock Text="{Binding Income}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" FontSize="16"/>
 				<TextBlock Text="{Binding Expense}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" FontSize="16"/>
-				<TextBlock Text="{Binding Savings}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" FontSize="16"/>
+				<TextBlock Text="{Binding Earnings}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10" FontSize="16">
+					<TextBlock.Styles>
+						<Style Selector="TextBlock">
+							<Style.Setters>
+								<Setter Property="Foreground" Value="{Binding Earnings, Converter={StaticResource PositiveValueConverter}}"/>
+							</Style.Setters>
+						</Style>
+					</TextBlock.Styles>
+				</TextBlock>
+					
 			</StackPanel>
 
 			<Grid Grid.Column="2" RowDefinitions="*, Auto">
@@ -40,10 +54,8 @@
 						Series="{Binding Series}"
 						XAxes="{Binding XAxes}">
 				</lvc:CartesianChart>
-				<Grid Grid.Row="1" ColumnDefinitions="Auto, *, Auto"  Height="50" Background="Black">
-					<Button Grid.Column="0"  Content="&lt;" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10"/>
-					<TextBlock Grid.Column="1" Text="{Binding CurrentMonth}" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10" FontSize="16"/>
-					<Button Grid.Column="2" Command="{Binding NextMonthCommand}" Content="&gt;" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10"/>
+				<Grid Grid.Row="1">
+					<views:MonthNavigatorView/>
 				</Grid>
 			</Grid>
 			
